--- a/tests/parser_tests.yaml
+++ b/tests/parser_tests.yaml
@@ -38,6 +38,26 @@
     day of week: [0]
     command: "echo hello"
 
+- description: "step larger than range is valid"
+  cronline: "1-5/30 0 1 1 0 echo hello"
+  expected:
+    minute: [1]
+    hour: [0]
+    day of month: [1]
+    month: [1]
+    day of week: [0]
+    command: "echo hello"
+
+- description: "step values appear to be unbounded"
+  cronline: "1-5/10000 0 1 1 0 echo hello"
+  expected:
+    minute: [1]
+    hour: [0]
+    day of month: [1]
+    month: [1]
+    day of week: [0]
+    command: "echo hello"
+
 - description: "Can't step with a prefix"
   cronline: "1-5/20 0 1 1-6/OCT 0 echo hello"
   error: true
@@ -233,3 +253,27 @@
   expected:
     type: SyntaxError
     value: "Bad day of week"
+
+- description: Max allowed, completely unrestricted
+  cronline: "* * * * * echo hello"
+  expected:
+    minute: [
+      0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15,
+      16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29,
+      30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43,
+      44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57,
+      58, 59
+    ]
+    hour: [
+      0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12,
+      13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23
+    ]
+    day of month: [
+      1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11,
+      12, 13, 14, 15, 16, 17, 18, 19, 20,
+      21, 22, 23, 24, 25, 26, 27, 28, 29,
+      30, 31
+    ]
+    month: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]
+    day of week: [0,1, 2, 3, 4, 5, 6, 7]
+    command: "echo hello"
